[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Modak-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/FinishLevel/FinishLevel.gd" type="Script" id=2]
[ext_resource path="res://UI/MainTheme.theme" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 52
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="FinishLevel" type="CanvasLayer"]
script = ExtResource( 2 )
cc_path = NodePath("CenterContainer")
highscores_path = NodePath("CenterContainer/vb/highscores")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 640, 360 )
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vb" type="VBoxContainer" parent="CenterContainer"]
margin_left = 327.0
margin_top = 106.0
margin_right = 952.0
margin_bottom = 613.0
custom_constants/separation = 29

[node name="LevelComplete" type="Label" parent="CenterContainer/vb"]
margin_right = 625.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "Level Complete!"
align = 1

[node name="hb" type="HBoxContainer" parent="CenterContainer/vb"]
margin_top = 108.0
margin_right = 625.0
margin_bottom = 163.0
custom_constants/separation = 26
alignment = 1

[node name="vb1" type="VBoxContainer" parent="CenterContainer/vb/hb"]
margin_left = 159.0
margin_right = 299.0
margin_bottom = 55.0

[node name="Score" type="Label" parent="CenterContainer/vb/hb/vb1"]
margin_right = 140.0
margin_bottom = 55.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = SubResource( 3 )
text = "Score"
align = 2

[node name="Highscore" type="Label" parent="CenterContainer/vb/hb/vb1"]
visible = false
margin_top = 35.0
margin_right = 140.0
margin_bottom = 66.0
rect_min_size = Vector2( 140, 0 )
text = "Highscore"
align = 2

[node name="vb2" type="VBoxContainer" parent="CenterContainer/vb/hb"]
margin_left = 325.0
margin_right = 465.0
margin_bottom = 55.0

[node name="ScoreAmount" type="Label" parent="CenterContainer/vb/hb/vb2"]
margin_right = 140.0
margin_bottom = 55.0
rect_min_size = Vector2( 140, 0 )
custom_fonts/font = SubResource( 3 )
text = "5348"

[node name="HighscoreAmount" type="Label" parent="CenterContainer/vb/hb/vb2"]
visible = false
margin_top = 35.0
margin_right = 140.0
margin_bottom = 66.0
rect_min_size = Vector2( 140, 0 )
text = "5348"

[node name="Label" type="Label" parent="CenterContainer/vb"]
margin_top = 192.0
margin_right = 625.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 2 )
text = "HIGHSCORES"
align = 1

[node name="Loading" type="Label" parent="CenterContainer/vb"]
margin_top = 290.0
margin_right = 625.0
margin_bottom = 321.0
text = "Loading..."
align = 1

[node name="highscores" type="HBoxContainer" parent="CenterContainer/vb"]
margin_top = 350.0
margin_right = 625.0
margin_bottom = 350.0
custom_constants/separation = 25
alignment = 1

[node name="names" type="VBoxContainer" parent="CenterContainer/vb/highscores"]
margin_right = 300.0
rect_min_size = Vector2( 300, 0 )

[node name="Name" type="Label" parent="CenterContainer/vb/highscores/names"]
visible = false
margin_right = 300.0
margin_bottom = 31.0
rect_min_size = Vector2( 300, 0 )
text = "DEFAULT NAME"
align = 2

[node name="highscores" type="VBoxContainer" parent="CenterContainer/vb/highscores"]
margin_left = 325.0
margin_right = 625.0
rect_min_size = Vector2( 300, 0 )

[node name="Highscore" type="Label" parent="CenterContainer/vb/highscores/highscores"]
visible = false
margin_right = 300.0
margin_bottom = 31.0
text = "100000"

[node name="NextLevel" type="Button" parent="CenterContainer/vb"]
margin_top = 379.0
margin_right = 625.0
margin_bottom = 507.0
rect_min_size = Vector2( 0, 128 )
text = "Next Level"

[connection signal="pressed" from="CenterContainer/vb/NextLevel" to="." method="_on_NextLevel_pressed"]
